- Fixed issue with datetimepicker not using css - Setup create form for task item - Add icon for old unfinished tasks

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -3,5 +3,8 @@
 @import "layout";
 @import "flash";
 @import "task-container";
+@import "task-item";
 @import "task-strike";
 @import "checkbox";
+@import "datetimepicker";
+@import "popover";
