--- a/assets/css/checkbox.scss
+++ b/assets/css/checkbox.scss
@@ -1,57 +1,62 @@
 .checkbox-container {
-    display: block;
-    position: relative;
-    margin-bottom: 12px;
-    cursor: pointer;
-    font-size: 22px;
-    user-select: none;
-}
+  cursor: pointer;
+  display: block;
+  font-size: 22px;
+  margin-bottom: 12px;
+  position: relative;
+  user-select: none;
 
-.checkbox-container input {
-    position: absolute;
-    opacity: 0;
+  input {
     cursor: pointer;
-    top: 15px;
-    left: -40px;
     height: 30px;
+    left: -40px;
+    opacity: 0;
+    position: absolute;
+    top: 15px;
     width: 30px;
     z-index: 1000;
-}
 
-.checkmark {
-  position: absolute;
-  top: 15px;
-  left: -40px;
-  height: 30px;
-  width: 30px;
-  background-color: #eee;
-  border-radius: 20px;
-}
+    &:checked {
+      & ~ .checkmark:after {
+      display: block;
+      }
 
-.checkbox-container:hover input ~ .checkmark {
-    background-color: #ccc;
-}
+      & ~ .checkmark {
+        background-color: #31708f;
+      }
+    }
+  }
 
-.checkbox-container input:checked ~ .checkmark {
-    background-color: #31708f;
-}
-
-.checkmark:after {
-    content: "";
+  .checkmark {
+    background-color: #eee;
+    border-radius: 20px;
+    height: 30px;
+    left: -40px;
     position: absolute;
-    display: none;
-}
+    top: 15px;
+    width: 30px;
 
-.checkbox-container input:checked ~ .checkmark:after {
-    display: block;
-}
+    &:after {
+      border: solid white;
+      border-width: 0 3px 3px 0;
+      content: "";
+      display: none;
+      height: 15px;
+      left: 10px;
+      position: absolute;
+      top: 5px;
+      transform: rotate(45deg);
+      width: 10px;
+    }
+  }
 
-.checkbox-container .checkmark:after {
-    left: 10px;
-    top: 5px;
-    width: 10px;
-    height: 15px;
-    border: solid white;
-    border-width: 0 3px 3px 0;
-    transform: rotate(45deg);
+  &:hover {
+    input ~ .checkmark {
+      background-color: #ccc;
+    }
+
+    input:checked ~.checkmark {
+      background-color: #31708f;
+    }
+  }
 }
