--- a/assets/css/task-container.scss
+++ b/assets/css/task-container.scss
@@ -1,26 +1,17 @@
 .tasks-container {
-  width: 500px;
-  height: 650px;
-  box-shadow: 0px 2px 6px 2px rgba(0,0,0,0.8);
   border: none;
-}
+  box-shadow: 0px 2px 6px 2px rgba(0,0,0,0.8);
+  height: 650px;
+  width: 500px;
 
-.tasks-container > .card-header {
-  background-color: #31708f;
-  color: #fff;
-}
+  #add-task {
+    border-radius: 40px;
+    border: 1px solid #145222;
+    margin-top: 10px;
+  }
 
-.tasks-container .task-item {
-  padding: 0 0 10px 0;
-  margin: 0 0 10px 0;
-  background: #fff;
-  color: #2db7d2;
-  border-bottom: 2px solid;
-  border-radius: 0px;
-}
-
-#add-task {
-  border-radius: 40px;
-  margin-top: 10px;
-  border: 1px solid #145222;
+  .card-header {
+    background-color: #31708f;
+    color: #fff;
+  }
 }
