- Transferred js to separate files which are then imported through app.js for use - Removed flash css in favor of conditional to check if has flash - Changed models to context usage since models are no longer used in version 1.3

--- a/lib/todo_web/templates/task_item/index.html.eex
+++ b/lib/todo_web/templates/task_item/index.html.eex
@@ -12,7 +12,7 @@
       </div>
       <div class="clearfix"></div>
     </div>
-    <div class="card-body">
+    <div class="card-body task-list">
       <%= for task_item <- @task_items do %>
         <div class="task-item">
           <div class="pull-left task-item-details">
