--- a/lib/todo_web/templates/layout/app.html.eex
+++ b/lib/todo_web/templates/layout/app.html.eex
@@ -13,8 +13,18 @@
 
   <body>
     <div class="container">
-      <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-      <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+      <%= if info = get_flash(@conn, :info) do %>
+        <p class="alert alert-info alert-dismissible" role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <%= info %>
+        </p>
+      <% end %>
+      <%= if error = get_flash(@conn, :error) do %>
+        <p class="alert alert-danger" role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <%= error %>
+        </p>
+      <% end %>
 
       <main role="main">
         <%= render @view_module, @view_template, assigns %>
