--- a/lib/todo_web/templates/task_item/add_task_form.html.eex
+++ b/lib/todo_web/templates/task_item/add_task_form.html.eex
@@ -1,20 +1,22 @@
-<form id="add-task-form" class="form d-none">
-  <div class="form-group">
-    <label for="task-item-name">Name: </label>
-    <input id="task-item-name" type="text" name="task_item[name]" class="form-control"/>
-  </div>
-  <div class="form-group">
-    <label for="task-item-description">Description: </label>
-    <textarea id="task-item-description" type="text" name="task_item[description]" class="form-control"></textarea>
-  </div>
-  <div class="form-group">
-    <label for="task-item-accomplish-at">Accomplish At: </label>
-    <div class="input-group">
-      <input id="task-item-accomplish-at" type="text" name="task_item[accomplish_at]" class="form-control" readonly/>
-      <span class="input-group-append">
-        <div class="input-group-text"><i class="fa fa-calendar"></i></div>
-      </span>
+<div id="add-task-form-container" class="d-none">
+  <%= form_for @conn, task_item_path(@conn, :create), [id: "add-task-form", class: "form", as: :task_item ], fn f -> %>
+    <div class="form-group">
+      <%= label f, :name, class: "control-label" %>
+      <%= text_input f, :name, class: "form-control", id: "task-item-name" %>
     </div>
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+    <div class="form-group">
+      <%= label f, :description, class: "control-label" %>
+      <%= textarea f, :description, class: "form-control", id: "task-item-description" %>
+    </div>
+    <div class="form-group">
+      <%= label f, :accomplish_at, class: "control-label" %>
+      <div class="input-group">
+        <%= text_input f, :accomplish_at, class: "form-control", readonly: true, id: "task-item-accomplish-at" %>
+        <span class="input-group-append">
+          <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+        </span>
+      </div>
+    </div>
+    <%= submit "Submit", class: "btn btn-primary "%>
+  <% end %>
+</div>
