- Removed unused description column - Begin setup for update/delete operations - Updated layout since it will cause confusion for user for update/delete operations - Replaced TaskItem with TaskList and changed directory since it was not following the proper context/schema layout

--- a/assets/css/task-container.scss
+++ b/assets/css/task-container.scss
@@ -15,7 +15,15 @@
     color: #fff;
   }
 
-  .task-list {
-    overflow: auto;
+  .tab-content {
+    margin-top: 20px;
+  }
+
+  #nav-unfinished-tab {
+    border-radius: 20px 0px 0px 20px;
+  }
+
+  #nav-finished-tab {
+    border-radius: 0px 20px 20px 0px;
   }
 }
